# mcp-rag-server

./: .dockerignore  .env.backup  .env.example  .env.example.backup  .env.example.backup2  .gitignore  LICENSE  README.md  REFACTORING_SUMMARY.md  benchmark_results_20250725_213407.json  benchmark_results_20250725_213549.json  docker-optimization-summary.md  pyproject.toml  requirements.txt  unit-test-results.txt
.cursor/: mcp.json
.cursor/rules/: derived-cursor-rules.mdc
.github/workflows/: docker-publish.yml
.specstory/: .gitignore
.specstory/history/: 2025-07-24_19-57Z-tworzenie-serwera-mcp-rag-z-qdrant.md  2025-07-24_21-10Z-sprawdzenie-statusu-pamięci.md  2025-07-25_05-48Z-do-we-have-any-documents-in-memory.md  2025-07-25_07-30Z-sprawdzenie-planu-działania-i-następne-kroki.md  2025-07-25_08-17Z-commit-changes-and-switch-to-phase-4.md  2025-07-25_08-37Z-przenieś-zawartość-pliku-do-dokumentacji.md  2025-07-25_10-14Z-zapisz-zmiany-w-repozytorium.md  2025-07-25_10-16Z-przejdź-do-następnego-zadania.md  2025-07-25_13-14Z-poprawa-dokumentacji-i-organizacja-plików.md  2025-07-25_14-01Z-sprawdzenie-działania-narzędzi-mcp-rag.md
deployment/: README.md  mcp-rag-server.service  start_services.sh
docker/: Dockerfile  Dockerfile.optimized  README.md  docker-compose.acme.yml  docker-compose.mobile.yml  docker-compose.web-dev.yml  docker-compose.yml
docs/00-overview/: documentation-index.md  project-overview.md  publication-readiness-summary.md
docs/01-architecture/: system-architecture.md
docs/01-overview/: project-overview.md
docs/02-architecture/: system-architecture.md
docs/02-installation/: Cursor IDE RAG Server Configurations - Complete Setup.md  cursor-ide-automatic-container-management.md  docker-image-optimization-guide.md  docker-port-mapping-and-healthcheck-guide.md  docker-registry-publishing-guide  docker-registry-publishing-guide.md  environment-variables-configuration-guide.md  installation-guide.md  mcp-vs-fastmcp-configuration-guide.md  project-isolation-configuration.md  unified-mcp-environment-variables-guide.md
docs/03-api/: api-reference-updated-with-mcp-prompts.md  api-reference.md  mcp-prompts-implementation-code-analysis-and-review.md
docs/03-development/: installation-guide.md  troubleshooting.md
docs/04-development/: MCP RAG Server - Project Context Analysis Capabilities.md  README.md  development-phases.md  project-refactoring.md  refactoring-and-testing-summary.md  sequential-task-analysis-capabilities.md
docs/04-development/phases/: README.md  development-phases-overview.md  project-refactoring-overview.md
docs/04-features/: project-phases-overview.md
docs/04-features/phase1-foundations/: README.md
docs/04-features/phase2-rag-core/: README.md
docs/04-features/phase3-mcp-integration/: README.md
docs/04-features/phase4-memory-integration/: implementation-plan.md
docs/04-features/phase5-advanced-features/: README.md
docs/05-troubleshooting/: environment-variables-configuration-fix.md  environment-variables-mapping-fix.md  mcp-user-id-configuration-fix.md  troubleshooting-guide.md
docs_new/00-overview/: project-overview.md
examples/: advanced_features_example.py  basic_usage.py  http_integration_example.py  simple_server.py
mem0_data/: memories.json
phase4/: README.md  implementation-plan.md
project-management/: documentation-preparation-workflow.md
scripts/: manage_docker.sh  manage_projects.sh  manage_server.sh  performance_benchmark.py
src/: run_server.py  run_server_http.py
src/mcp_rag_server/: __init__.py  config.py  server.py  validation.py
src/mcp_rag_server/resources/: __init__.py  document_resources.py  memory_resources.py
src/mcp_rag_server/services/: __init__.py  code_analysis_service.py  context_service.py  document_processor.py  gemini_service.py  mem0_service.py  prompts_service.py  qdrant_service.py  rag_service.py  reasoning_service.py  reasoning_service_optimized.py  (+1 more)
testing/: Test Continuation Complete - All Tests Passing.md  Test Continuation Progress - MCP RAG Server.md
tests/: README.md  __init__.py
tests/integration/: __init__.py  test_ai_tools.py  test_all_mcp_rag_tools.py  test_connections.py  test_health.py  test_mcp_client.py  test_mcp_methods.py  test_mcp_rag_tools_docker.py  test_mcp_rag_tools_mcp.py  test_mcp_tools_list.py  test_phase3_tools.py  test_session_integration.py
tests/unit/: __init__.py  test_advanced_features.py  test_code_analysis_service.py  test_context_service.py  test_http_tools.py  test_mem0_service.py  test_memory_tools.py  test_prompts_service.py  test_rag_service.py  test_reasoning_service.py  test_session_service.py
(+31 files in other folders)
